--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body{
+  background-color: black;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.container{
+  text-align: center;
+  justify-content: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box{
+  border: 1px solid white;
+  width: 114px;
+  height: 114px;
+  font-size: 90px;
+  line-height: 100px;
+}
+.box:hover{
+  cursor: pointer;
+}
+.board{
+  display: inline-flex;
+  flex-wrap: wrap;
+  width: 350px;
+  margin: auto
+}
+button{
+  background-color: white;
+  outline: none;
+  border-radius: 5px;
 }
